--- a/example/src/index.css
+++ b/example/src/index.css
@@ -26,10 +26,38 @@ body {
   font-size: 14px;
 }
 
-.red-area {
-  background: #5954D3;
-  height: 30px;
+h2 {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
+  margin-top: 50px;
+  color: #333;
+}
+
+.pink-area, .dark-pink-area {
+  min-height: 35px;
   margin-bottom: 20px;
+  color: #a5a2f0;
+  font-size: 14px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.pink-area {
+  background: #5954D3;
+}
+
+.dark-pink-area {
+  background: #403bb3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.has-nested {
+  overflow: hidden;
+  height: calc(100% - 60px);
+  padding: 20px;
+  margin-bottom: 0;
 }
 
 pre {
