create examples folder

--- a/examples/simple/src/index.css
+++ b/examples/simple/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900');
 
 body {
   padding: 40px 0;
-  font-family: Raleway, Helvetica, Arial;
+  font-family: "Roboto", sans-serif;
 }
 
 .header {
@@ -11,16 +11,16 @@ body {
 }
 
 .header h1 {
-  font-weight: 900;
+  font-weight: 800;
   text-align: center;
   font-size: 80px;
   margin-bottom: 0;
 }
 
 .header p {
-  padding-left: 60px;
-  margin-top: -10px;
-  font-size: 14px;
+  padding-left: 52px;
+  margin-top: -14px;
+  font-size: 12px;
 }
 
 h2 {
